--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,21 +1,33 @@
-<!-- {% extends 'base.html' %} -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register</title>
+</head>
+<body>
+    <h1>Register</h1>
 
+    <!-- This form will POST the data to the server when submitted -->
+    <form method="post">
 
-  <h1>Register</h1>
+        <!-- Name Field -->
+        <label for="name">{{ form.name.label }}</label> <br>
+        {{ form.name(size=32) }} <br>
 
+        <!-- Email Field -->
+        <label for="email">{{ form.email.label }}</label> <br>
+        {{ form.email(size=32) }} <br>
 
+        <!-- Password Field -->
+        <label for="password">{{ form.password.label }}</label> <br>
+        {{ form.password(size=32) }} <br>
 
-  <form method="post">
-    <label for="name">Name</label> <br>
-    <input name="name" id="name" required> <br>
-    <label for="email">Email Address</label><br>
-    <input name="email" id="email" required><br>
-    <label for="password">Password</label><br>
-    <input type="password" name="password" id="password" required><br>
-    <label for="confirm-password">Confirm Password</label><br>
-    <input type="password" name="password" id="password" required><br>
-   
+        <!-- Submit Button -->
+        {{ form.register() }} <!-- This is the submit button from forms.py -->
+    </form>
 
-    <input type="submit" value="Register">
-  </form>
-<!-- {% endblock %} -->
+    <!-- Optional: Link for forgot password -->
+    <p><a href="/forgot-password">Forgot password?</a></p>
+</body>
+</html>
