--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,7 +1,7 @@
 
 {% block content %}
 <h1>Register</h1>
-<form action="" method="post">
+<form action="{{ url_for('register') }}" method="post">
 {{ form.csrf_token }}
 <!-- {{ form.hidden_tag() }} -->
 <p>
