style: add style for the nav bar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,11 @@
 <html>
     <head>
-    
+        {% if title %}
+        <title>{{ title }} - AmalLearning</title>
+        {% else %}
+        <title>Welcome to AmalLearning</title>
+        {% endif %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
         <div class="topnav">
