style: customize the colors

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,7 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    /* background-color: #333; */
+    background-color: #002aff;
     overflow: hidden;
   }
   
@@ -16,13 +17,15 @@
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: #f0e195;
     color: black;
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+    background-color: #ffd500;
+    color: black;
   }
+
+  
   
