--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,9 @@
         <title>Welcome to AmalLearning</title>
         {% endif %}
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
     </head>
-    <body>
+    <body style="background-color: blueviolet;">
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#features">Features</a>
@@ -16,5 +17,6 @@
           </div>
         {% block content %}
         {% endblock %}
+
     </body>
 </html>
