--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
     </head>
-    <body style="background-color: blueviolet;">
+    <body style="background-color: rgb(202, 170, 231);">
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#features">Features</a>
