--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,7 +6,7 @@
 <form action="{{ url_for('register') }}" method="post">
     {{ form.csrf_token }}
     <p>
-        <!-- {{ form.name.label }}<br> -->
+        {{ form.name.label }}<br>
         {{ form.name(size=32) }}<br>
         {% for error in form.name.errors %}
             <span style="color: red;">[{{ error }}]</span>
