--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,9 @@
         {% else %}
         <title>Welcome to AmalLearning</title>
         {% endif %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
+          
     </head>
     <body style="background-color: #D9EAFD">
         <div class="topnav">
