--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,45 +1,53 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-<h1>Register</h1>
-<form action="{{ url_for('register') }}" method="post">
-    {{ form.csrf_token }}
-    <p>
-        {{ form.name.label }}<br>
-        {{ form.name(size=32) }}<br>
-        {% for error in form.name.errors %}
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card p-4 shadow-sm">
+          <h1 class="card-title text-center mb-4">Register</h1>
+          <form method="post" action="{{ url_for('register') }}">
+            {{ form.csrf_token }}
+  
+            <!-- form fields go here -->
+            <div class="mb-3">
+                {{ form.name.label(class="form-label") }}
+                {{ form.name(class="form-control", size=32) }}
+              </div>
+            <div class="mb-3">
+                {{ form.username.label(class="form-label") }}
+                {{ form.username(class="form-control", size=32) }}
+              </div>
+              
+            <div class="mb-3">
+                {{ form.email.label(class="form-label") }}
+                {{ form.email(class="form-control", size=64) }}
+              </div>
+            <div class="mb-3">
+                {{ form.password.label }}<br>
+                {{ form.password(class="form-control", size=32) }}<br>
+                {% for error in form.password.errors %}
+                 <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+
+            </div>
+
+            <div class="mb-3">
+            {{ form.password2.label }}<br>
+            {{ form.password2(class="form-control", size=32) }}<br>
+            {% for error in form.password2.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
-    </p>
-    <p>
-        {{ form.username.label }}<br>
-        {{ form.username(size=32) }}<br>
-        {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.email.label }}<br>
-        {{ form.email(size=64) }}<br>
-        {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=32) }}<br>
-        {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password2.label }}<br>
-        {{ form.password2(size=32) }}<br>
-        {% for error in form.password2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.register() }}</p>
-</form>
-{% endblock %}
+        </div>
+
+        <div class="mb-3">
+            {{ form.register() }}
+        </div>
+  
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
